aws/lambda/s3-file-system/terraform/sg.tf
resource "aws_security_group" "this" {
  name   = "${var.service}-sg"
  vpc_id = module.vpc.vpc_id

  egress {
    from_port   = 2049
    to_port     = 2049
    protocol    = "tcp"
    cidr_blocks = [module.vpc.vpc_cidr_block]
  }

  ingress {
    from_port = 2049
    to_port   = 2049
    protocol  = "tcp"
    self      = true
  }

  egress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = local.default_tags
}
